--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,43 @@
-#container {
-  width: 100%;
+/* fallback for old browsers */
+/* Chrome 10-25, Safari 5.1-6 */
+/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+/* Chrome 10-25, Safari 5.1-6 */
+html {
+  font-size: 16px;
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Roboto", sans-serif;
   text-rendering: optimizeLegibility;
   background: #ece9e6;
   /* fallback for old browsers */
-  /* Chrome 10-25, Safari 5.1-6 */
   background: -webkit-gradient(linear, left top, right top, from(#ffffff), to(#ece9e6));
   background: linear-gradient(to right, #ffffff, #ece9e6);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, #ffffff, #ece9e6);
+  font-weight: 300;
+  color: #000;
 }
 
-body h2 {
-  border-radius: 5px;
-  padding: 15px 30px;
+h2 {
+  font-size: 3rem;
   letter-spacing: 1px;
-  font-size: 45px;
-  font-weight: 300;
-  color: #009bc5;
-  display: inline-block;
+}
+
+h5 {
+  font-size: 1.5rem;
+}
+
+p {
+  line-height: 1.5rem;
+}
+
+.section-container {
+  width: 100%;
 }
 
 header {
   height: 100vh;
-  width: 100vw;
   position: relative;
 }
 
@@ -38,21 +50,19 @@ header .kh-png {
 
 header #background-image {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: absolute;
-  z-index: -1;
-  opacity: 1;
 }
 
 #navbar {
   z-index: 1;
-  position: relative;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.7);
+  position: fixed;
 }
 
-#navbar img {
-  width: 40px;
+#navbar .kh-logo {
+  width: 2.5rem;
 }
 
 #navbar .navbar-right {
@@ -61,9 +71,17 @@ header #background-image {
           justify-content: flex-end;
 }
 
+#navbar .navbar-toggler {
+  border-color: white;
+  background-color: rgba(0, 0, 0, 0.411);
+}
+
+#navbar .navbar-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
 #navbar .nav-item {
   position: relative;
-  height: 100%;
 }
 
 #navbar .nav-item:hover:after {
@@ -72,11 +90,11 @@ header #background-image {
   width: 100%;
   top: 52px;
   border-bottom: 5px solid #009bc5;
-  -webkit-animation: borderr 0.4s linear;
-          animation: borderr 0.4s linear;
+  -webkit-animation: border-bottom 0.4s linear;
+          animation: border-bottom 0.4s linear;
 }
 
-@-webkit-keyframes borderr {
+@-webkit-keyframes border-bottom {
   0% {
     width: 0%;
   }
@@ -88,7 +106,7 @@ header #background-image {
   }
 }
 
-@keyframes borderr {
+@keyframes border-bottom {
   0% {
     width: 0%;
   }
@@ -103,23 +121,15 @@ header #background-image {
 #navbar .nav-link {
   margin: 0 10px;
   color: #000;
-  font-weight: 300;
-  font-size: 19px;
+  font-size: 1.1rem;
 }
 
 #navbar .nav-link:hover {
-  background-color: rgba(255, 255, 255, 0) !important;
   font-weight: 400;
 }
 
 #servicios {
-  width: 100%;
   text-align: center;
-  position: relative;
-}
-
-#servicios h2 {
-  color: #111;
 }
 
 #servicios .servicio {
@@ -128,66 +138,32 @@ header #background-image {
 
 #servicios h5 {
   margin: 15px 0;
-  font-size: 24px;
-  font-weight: 300;
 }
 
 #servicios p {
   width: 50%;
   margin: auto;
-  font-weight: 300;
-  line-height: 25px;
-  font-size: 17px;
 }
 
 #servicios > div:nth-child(even) {
-  background: #00b4db;
+  color: #fff;
+  background: #009bc5;
   /* fallback for old browsers */
-  /* Chrome 10-25, Safari 5.1-6 */
   background: -webkit-gradient(linear, left top, right top, from(#0083b0), to(#00b4db));
   background: linear-gradient(to right, #0083b0, #00b4db);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  color: #fff;
+  background: -webkit-linear-gradient(to right, #0083b0, #00b4db);
 }
 
 #servicios img {
-  width: 70px;
+  width: 4.5rem;
 }
 
 #servicios i {
-  font-size: 45px;
+  font-size: 3rem;
 }
 
 #steel-frame .parallax-container {
-  position: relative;
-  overflow: hidden;
-  height: 500px;
-}
-
-#steel-frame .parallax-container .parallax {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-}
-
-#steel-frame .parallax-container .parallax img {
-  opacity: 0;
-  position: absolute;
-  left: 50%;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-}
-
-#steel-frame .parallax-container {
-  margin-top: 130px;
+  margin: 130px 0;
   height: 250px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -196,46 +172,47 @@ header #background-image {
 
 #steel-frame .parallax-container h2 {
   color: #fff;
-  font-size: 40px;
   font-weight: 400;
+  width: 70%;
+  margin: auto;
+  text-align: center;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  margin: auto;
 }
 
 #steel-frame .parallax-container img {
-  -webkit-filter: brightness(60%);
-          filter: brightness(60%);
+  -webkit-filter: brightness(50%);
+          filter: brightness(50%);
 }
 
 #steel-frame .steel-frame-info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 80%;
-  margin: auto;
-  padding: 125px 0;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-align: center;
   font-weight: 300;
 }
 
-#steel-frame .steel-frame-info p {
-  line-height: 1.5rem;
-  padding: 0 10px;
+#steel-frame .steel-frame-info .info {
+  width: 50%;
+}
+
+#steel-frame .steel-frame-info .steel-frame-img {
+  width: 30%;
+}
+
+#steel-frame .steel-frame-info .steel-frame-inner-img {
+  display: none;
 }
 
 #steel-frame .steel-frame-info h2 {
-  color: #111;
-  padding: 0;
   margin-bottom: 40px;
-}
-
-#steel-frame .steel-frame-img {
-  width: 450px;
 }
 
 #steel-frame .ventajas-card {
@@ -246,12 +223,9 @@ header #background-image {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 800px;
-  margin: auto;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  border-radius: 6%;
+  max-width: 800px;
+  margin: 130px auto;
+  border-radius: 2rem;
   padding: 30px;
   color: #fff;
   background: #009bc5;
@@ -260,18 +234,18 @@ header #background-image {
 #steel-frame .ventajas-card h3 {
   margin: 20px 0;
   text-align: center;
-  font-size: 34px;
-  font-weight: 200;
+  font-size: 2rem;
+  font-weight: 300;
 }
 
 #steel-frame .ventajas-card .item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   width: 75%;
   -ms-flex-item-align: center;
       align-self: center;
   text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin: 30px 0;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -290,28 +264,23 @@ header #background-image {
 #steel-frame .ventajas-card .item p {
   margin-left: 15px;
   font-weight: 200;
-  font-size: 18px;
-  line-height: 23px;
+  font-size: 1.1rem;
 }
 
 #galeria {
-  margin-top: 100px;
-  margin-bottom: 100px;
   text-align: center;
 }
 
 #galeria .nuestras-obras {
   width: 40%;
   margin: auto;
-  -webkit-clip-path: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%);
-          clip-path: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%);
+  -webkit-clip-path: polygon(10% 0%, 100% 0%, 90% 100%, 0% 100%);
+          clip-path: polygon(10% 0%, 100% 0%, 90% 100%, 0% 100%);
   padding: 20px 0;
-  background: #00b4db;
-  /* fallback for old browsers */
-  /* Chrome 10-25, Safari 5.1-6 */
+  background: #009bc5;
   background: -webkit-gradient(linear, left top, right top, from(#0083b0), to(#00b4db));
   background: linear-gradient(to right, #0083b0, #00b4db);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, #0083b0, #00b4db);
 }
 
 #galeria h2 {
@@ -321,16 +290,16 @@ header #background-image {
 }
 
 #galeria .carousel {
-  width: 80%;
+  width: 1024px;
+  height: 650px;
   margin: auto;
   margin-top: 30px;
-  position: relative;
 }
 
 #galeria .carousel-inner {
-  margin: auto;
-  max-width: 1024px;
-  max-height: 650px;
+  position: relative;
+  width: 1024px;
+  height: 650px;
 }
 
 #galeria .carousel-inner img {
@@ -338,7 +307,7 @@ header #background-image {
   height: 650px;
 }
 
-#galeria .carousel-inner h5 {
+#galeria h5 {
   font-size: 24px;
   margin: 10px;
 }
@@ -351,16 +320,15 @@ header #background-image {
 }
 
 #contacto {
-  padding: 75px 0;
+  margin-top: 130px;
+  padding: 75px 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  background: #00b4db;
-  /* fallback for old browsers */
-  /* Chrome 10-25, Safari 5.1-6 */
+  background: #009bc5;
   background: -webkit-gradient(linear, left top, right top, from(#0083b0), to(#00b4db));
   background: linear-gradient(to right, #0083b0, #00b4db);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, #0083b0, #00b4db);
 }
 
 #contacto h2 {
@@ -368,24 +336,28 @@ header #background-image {
       -ms-grid-row-align: center;
       align-self: center;
   color: #fff;
-  -webkit-box-flex: 0.6;
-      -ms-flex: 0.6;
-          flex: 0.6;
+  width: 25%;
 }
 
 #contacto #form-container {
+  width: 40%;
+}
+
+#contacto #map {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  margin: 0 50px;
+  border-radius: 20px;
+}
+
+#contacto label {
+  margin: 10px 0;
 }
 
 #contacto form {
   padding: 10px;
   margin: auto;
-  /* label color */
-  /* label underline focus color */
-  /* valid color */
-  /* icon prefix focus color */
 }
 
 #contacto form .input-field label {
@@ -396,7 +368,9 @@ header #background-image {
 #contacto form .input-field input[type="text"],
 #contacto form .input-field input[type="tel"],
 #contacto form .input-field textarea {
-  color: #fff !important;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: #ddd;
   border-bottom: 1px solid #ddd;
 }
 
@@ -404,35 +378,24 @@ header #background-image {
 #contacto form .input-field input[type="text"]:focus,
 #contacto form .input-field input[type="tel"]:focus,
 #contacto form .input-field textarea:focus {
-  border-bottom: 1.5px solid #27a69a;
+  border-bottom: 2px solid #22dac7;
 }
 
-#contacto form .input-field .prefix.active {
-  color: #ddd;
+#contacto form .input-field input[type="email"].valid,
+#contacto form .input-field input[type="text"].valid,
+#contacto form .input-field input[type="tel"].valid,
+#contacto form .input-field textarea.valid {
+  border-bottom: 2px solid #00f800;
 }
 
-#contacto #map {
-  -webkit-box-flex: 0.8;
-      -ms-flex: 0.8;
-          flex: 0.8;
-  margin: 0 50px;
-  border-radius: 20px;
-}
-
-#contacto label {
-  margin: 10px 0;
+#contacto form .input-field input[type="email"].invalid,
+#contacto form .input-field input[type="text"].invalid,
+#contacto form .input-field input[type="tel"].invalid,
+#contacto form .input-field textarea.invalid {
+  border-bottom: 2px solid red;
 }
 
 footer {
-  border-top: 1px solid #ccc;
-  color: #fff;
-  background: #00b4db;
-  /* fallback for old browsers */
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-gradient(linear, left top, right top, from(#0083b0), to(#00b4db));
-  background: linear-gradient(to right, #0083b0, #00b4db);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  padding: 20px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -441,13 +404,20 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-weight: 200;
+  padding: 20px 0;
+  font-weight: 300;
   font-size: 14px;
+  color: #fff;
+  border-top: 1px solid #ccc;
+  background: #009bc5;
+  background: -webkit-gradient(linear, left top, right top, from(#0083b0), to(#00b4db));
+  background: linear-gradient(to right, #0083b0, #00b4db);
+  background: -webkit-linear-gradient(to right, #0083b0, #00b4db);
 }
 
 footer .redes-container {
-  font-size: 18px;
   text-align: center;
+  font-size: 1.1rem;
 }
 
 footer i {
@@ -460,12 +430,219 @@ footer i:hover {
 }
 
 footer .copyright {
-  font-size: 20px;
+  font-size: 1.2rem;
 }
 
-footer .bold {
-  font-size: 16px;
-  font-weight: 300;
-  margin: 10px 0;
+footer p:not(.sub-text) {
+  margin: 7px 0;
+}
+
+footer .sub-text {
+  font-weight: 200;
+}
+
+/* ----------------- MEDIA QUERYS ----------------- */
+@media only screen and (max-width: 1100px) {
+  html {
+    font-size: 14px;
+  }
+  header {
+    height: 70vh;
+  }
+  header .kh-png {
+    top: 45%;
+    right: 8%;
+    width: 300px;
+  }
+  #galeria {
+    margin-bottom: 100px;
+  }
+  #galeria .nuestras-obras {
+    width: 50%;
+    padding: 20px 0;
+  }
+  #galeria .carousel {
+    width: 800px;
+    height: 500px;
+  }
+  #galeria .carousel-inner {
+    width: 800px;
+    height: 500px;
+  }
+  #galeria .carousel-inner img {
+    width: 800px;
+    height: 500px;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  html,
+  body {
+    overflow-x: hidden !important;
+  }
+  .nav-item:hover:after {
+    display: none;
+  }
+  #steel-frame .parallax-container h2 {
+    width: 80%;
+  }
+  #steel-frame .steel-frame-info {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #steel-frame .steel-frame-info .info {
+    width: 70%;
+  }
+  #steel-frame .steel-frame-info p {
+    font-size: 1.3rem;
+    line-height: 1.8rem;
+  }
+  #steel-frame .steel-frame-info .steel-frame-img {
+    display: none;
+  }
+  #steel-frame .steel-frame-info .steel-frame-inner-img {
+    width: 70%;
+    margin: auto;
+    display: block;
+    margin-bottom: 3rem;
+  }
+  #contacto {
+    display: block;
+    margin: auto;
+  }
+  #contacto h2 {
+    color: #fff;
+    width: 80%;
+    text-align: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin: auto;
+  }
+  #contacto #form-container {
+    width: 80%;
+    margin: 3rem auto;
+  }
+  #contacto #form-container form {
+    text-align: center;
+  }
+  #contacto #map {
+    width: 500px;
+    height: 400px;
+    margin: auto;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  html,
+  body {
+    overflow-x: hidden !important;
+  }
+  html {
+    font-size: 13px;
+  }
+  header {
+    height: 60vh;
+  }
+  header .kh-png {
+    width: 200px;
+  }
+  #steel-frame .ventajas-card {
+    width: 100%;
+    border-radius: 0px;
+    margin-bottom: 50px;
+  }
+  #steel-frame .ventajas-card .item {
+    width: 90%;
+  }
+  #galeria .nuestras-obras {
+    width: 70%;
+    padding: 20px 0;
+  }
+  #galeria .carousel {
+    width: 100%;
+    height: auto;
+  }
+  #galeria .carousel-inner {
+    width: 100%;
+    height: auto;
+  }
+  #galeria .carousel-inner img {
+    width: 100%;
+    height: auto;
+  }
+  #contacto h2 {
+    width: 90%;
+  }
+  #contacto #form-container {
+    width: 90%;
+  }
+  #contacto #map {
+    width: 400px;
+    height: 300px;
+    margin: auto;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  html,
+  body {
+    overflow-x: hidden !important;
+  }
+  html {
+    font-size: 12px;
+  }
+  h2 {
+    font-size: 2.2rem;
+  }
+  #servicios p {
+    width: 80%;
+    font-size: 1.1rem;
+  }
+  #steel-frame .parallax-container h2 {
+    width: 90%;
+  }
+  #steel-frame .steel-frame-info .info {
+    width: 90%;
+  }
+  #steel-frame .ventajas-card {
+    border-radius: 0px;
+  }
+  #steel-frame .ventajas-card .item {
+    width: 90%;
+  }
+  header {
+    height: 45vh;
+  }
+  header .kh-png {
+    width: 150px;
+  }
+  #contacto #map {
+    width: 320px;
+    height: 220px;
+    margin: auto;
+  }
+  footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+}
+
+@media only screen and (max-width: 415px) {
+  html,
+  body {
+    overflow-x: hidden !important;
+  }
+  header {
+    height: 40vh;
+  }
+  header .kh-png {
+    width: 100px;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
