--- a/styles.scss
+++ b/styles.scss
@@ -1,43 +1,80 @@
+// Colors
+$dark: #000;
+$darkTransparent: rgba(
+  $color: #000,
+  $alpha: 0.3,
+);
+
+$white: #fff;
+$whiteTransparent: rgba(
+  $color: #fff,
+  $alpha: 0.7,
+);
+
+$grey: #ddd;
+$bgGreyFallback: #ece9e6; /* fallback for old browsers */
+$bgGreyGradient: linear-gradient(
+  to right,
+  #ffffff,
+  #ece9e6
+); /* Chrome 10-25, Safari 5.1-6 */
+$bgGreyGradient-webkit: -webkit-linear-gradient(
+  to right,
+  #ffffff,
+  #ece9e6
+); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+$lightbluePrimary: #009bc5;
+$lightblueGradient: linear-gradient(
+  to right,
+  #0083b0,
+  #00b4db
+); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+$lightblueGradient-webkit: -webkit-linear-gradient(
+  to right,
+  #0083b0,
+  #00b4db
+); /* Chrome 10-25, Safari 5.1-6 */
 // Components
 
 // General
 
-#container {
-  width: 100%;
+html {
+  font-size: 16px;
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Lato", "Roboto", sans-serif;
   text-rendering: optimizeLegibility;
-  background: #ece9e6; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #ffffff,
-    #ece9e6
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #ffffff,
-    #ece9e6
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: $bgGreyFallback; /* fallback for old browsers */
+  background: $bgGreyGradient;
+  background: $bgGreyGradient-webkit;
+  font-weight: 300;
+  color: $dark;
+}
 
-  h2 {
-    border-radius: 5px;
-    padding: 15px 30px;
-    letter-spacing: 1px;
-    font-size: 45px;
-    font-weight: 300;
-    // border: 2px solid #009bc5;
-    color: #009bc5;
-    display: inline-block;
-  }
+h2 {
+  font-size: 3rem;
+  letter-spacing: 1px;
+}
+
+h5 {
+  font-size: 1.5rem;
+}
+
+p {
+  line-height: 1.5rem;
+}
+
+.section-container {
+  width: 100%;
 }
 
 // Sections
 
 header {
   height: 100vh;
-  width: 100vw;
   position: relative;
 
   .kh-png {
@@ -49,40 +86,47 @@ header {
 
   #background-image {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: absolute;
-    z-index: -1;
-    opacity: 1;
   }
 } // header
 
 #navbar {
   z-index: 1;
-  position: relative;
   width: 100%;
-  background-color: rgba($color: #fff, $alpha: 0.7);
-  img {
-    width: 40px;
+  background-color: $whiteTransparent;
+  position: fixed;
+
+  .kh-logo {
+    width: 2.5rem;
   }
 
   .navbar-right {
     justify-content: flex-end;
   }
 
+  .navbar-toggler {
+    border-color: white;
+    background-color: rgba(0, 0, 0, 0.411);
+  }
+
+  .navbar-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  }
+
   .nav-item {
     position: relative;
-    height: 100%;
 
     &:hover:after {
       content: "";
       position: absolute;
       width: 100%;
       top: 52px;
-      border-bottom: 5px solid #009bc5;
-      animation: borderr 0.4s linear;
+      border-bottom: 5px solid $lightbluePrimary;
+      animation: border-bottom 0.4s linear;
     }
 
-    @keyframes borderr {
+    @keyframes border-bottom {
       0% {
         width: 0%;
       }
@@ -97,25 +141,17 @@ header {
 
   .nav-link {
     margin: 0 10px;
-    color: #000;
-    font-weight: 300;
-    font-size: 19px;
+    color: $dark;
+    font-size: 1.1rem;
 
     &:hover {
-      background-color: rgba(255, 255, 255, 0) !important;
       font-weight: 400;
     }
   }
 } // navbar
 
 #servicios {
-  width: 100%;
   text-align: center;
-  position: relative;
-
-  h2 {
-    color: #111;
-  }
 
   .servicio {
     padding: 30px 0;
@@ -123,144 +159,101 @@ header {
 
   h5 {
     margin: 15px 0;
-    font-size: 24px;
-    font-weight: 300;
   }
 
   p {
     width: 50%;
     margin: auto;
-    font-weight: 300;
-    line-height: 25px;
-    font-size: 17px;
   }
 
   & > div:nth-child(even) {
-    background: #00b4db; /* fallback for old browsers */
-    background: -webkit-linear-gradient(
-      to right,
-      #0083b0,
-      #00b4db
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-      to right,
-      #0083b0,
-      #00b4db
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-    color: #fff;
+    color: $white;
+    background: $lightbluePrimary; /* fallback for old browsers */
+    background: $lightblueGradient;
+    background: $lightblueGradient-webkit;
   }
 
   img {
-    width: 70px;
+    width: 4.5rem;
   }
 
   i {
-    font-size: 45px;
+    font-size: 3rem;
   }
 } // servicios
 
 #steel-frame {
   .parallax-container {
-    position: relative;
-    overflow: hidden;
-    height: 500px;
-  }
-
-  .parallax-container .parallax {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
-  }
-
-  .parallax-container .parallax img {
-    opacity: 0;
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-  }
-
-  .parallax-container {
-    margin-top: 130px;
+    margin: 130px 0;
     height: 250px;
     display: flex;
 
     h2 {
-      color: #fff;
-      font-size: 40px;
+      color: $white;
       font-weight: 400;
-      align-self: center;
+      width: 70%;
       margin: auto;
+      text-align: center;
+      align-self: center;
     }
 
     img {
-      filter: brightness(60%);
-    }
-  } // parallax
-
-  .steel-frame-info {
-    display: flex;
-    justify-content: space-between;
-    width: 80%;
-    margin: auto;
-    padding: 125px 0;
-    text-align: center;
-    font-weight: 300;
-    
-    p {
-      line-height: 1.5rem;
-      padding: 0 10px;
-    }
-
-    h2 {
-      color: #111;
-      padding: 0;
-      margin-bottom: 40px;
+      filter: brightness(50%);
     }
   }
 
-  .steel-frame-img {
-    width: 450px;
+  .steel-frame-info {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    font-weight: 300;
+
+    .info {
+      width: 50%;
+    }
+
+    .steel-frame-img {
+      width: 30%;
+    }
+
+    .steel-frame-inner-img {
+      display: none;
+    }
+
+    h2 {
+      margin-bottom: 40px;
+    }
   }
 
   .ventajas-card {
     display: flex;
     flex-direction: column;
-    width: 800px;
-    margin: auto;
-    justify-content: center;
-    border-radius: 6%;
+    max-width: 800px;
+    margin: 130px auto;
+    border-radius: 2rem;
     padding: 30px;
-    color: #fff;
-    background: #009bc5;
+    color: $white;
+    background: $lightbluePrimary;
 
     h3 {
       margin: 20px 0;
       text-align: center;
-      font-size: 34px;
-      font-weight: 200;
+      font-size: 2rem;
+      font-weight: 300;
     }
 
     .item {
+      display: flex;
       width: 75%;
       align-self: center;
       text-align: center;
-      display: flex;
       margin: 30px 0;
       justify-content: center;
 
       i {
         font-size: 20px;
-        color: rgb(0, 248, 0);
+        color: #00f800;
       }
 
       span {
@@ -270,137 +263,81 @@ header {
       p {
         margin-left: 15px;
         font-weight: 200;
-        font-size: 18px;
-        line-height: 23px;
+        font-size: 1.1rem;
       }
     }
   }
 } // steel-frame
 
 #galeria {
-  margin-top: 100px;
-  margin-bottom: 100px;
   text-align: center;
 
   .nuestras-obras {
     width: 40%;
     margin: auto;
-    clip-path: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%);
+    clip-path: polygon(10% 0%, 100% 0%, 90% 100%, 0% 100%);
     padding: 20px 0;
-    background: #00b4db; /* fallback for old browsers */
-    background: -webkit-linear-gradient(
-      to right,
-      #0083b0,
-      #00b4db
-    ); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(
-      to right,
-      #0083b0,
-      #00b4db
-    ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: $lightbluePrimary;
+    background: $lightblueGradient;
+    background: $lightblueGradient-webkit;
   }
+
   h2 {
     margin: auto;
-    color: #fff;
+    color: $white;
     font-weight: 400;
   }
 
   .carousel {
-    width: 80%;
+    width: 1024px;
+    height: 650px;
     margin: auto;
     margin-top: 30px;
-    position: relative;
   }
-
   .carousel-inner {
-    margin: auto;
-    max-width: 1024px;
-    max-height: 650px;
+    position: relative;
+    width: 1024px;
+    height: 650px;
 
     img {
       width: 1024px;
       height: 650px;
     }
+  }
 
-    h5 {
-      font-size: 24px;
-      margin: 10px;
-    }
+  h5 {
+    font-size: 24px;
+    margin: 10px;
   }
 
   .carousel-caption {
     position: absolute;
     left: 0;
     width: 100%;
-    background-color: rgba($color: #000, $alpha: 0.3);
+    background-color: $darkTransparent;
   }
 }
 
 #contacto {
-  padding: 75px 0;
+  margin-top: 130px;
+  padding: 75px 30px;
   display: flex;
-  background: #00b4db; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #0083b0,
-    #00b4db
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #0083b0,
-    #00b4db
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: $lightbluePrimary;
+  background: $lightblueGradient;
+  background: $lightblueGradient-webkit;
 
   h2 {
     align-self: center;
-    color: #fff;
-    flex: 0.6;
+    color: $white;
+    width: 25%;
   }
 
   #form-container {
-    flex: 1;
-  }
-  form {
-    padding: 10px;
-    margin: auto;
-    /* label color */
-    .input-field label {
-      color: #ddd;
-    }
-
-    .input-field {
-      input[type="email"],
-      input[type="text"],
-      input[type="tel"],
-      textarea {
-        color: #fff !important;
-        border-bottom: 1px solid #ddd;
-        &:focus {
-          border-bottom: 1.5px solid #27a69a;
-          // box-shadow: 0 1px 0 0 #ddd;
-        }
-      }
-    }
-
-    /* label underline focus color */
-    /* valid color */
-    // .input-field input[type="text"].valid {
-    //   border-bottom: 1px solid #ddd;
-    //   box-shadow: 0 1px 0 0 #ddd;
-    // }
-    // /* invalid color */
-    // .input-field input[type="text"].invalid {
-    //   border-bottom: 1px solid #ddd;
-    //   box-shadow: 0 1px 0 0 #ddd;
-    // }
-    /* icon prefix focus color */
-    .input-field .prefix.active {
-      color: #ddd;
-    }
+    width: 40%;
   }
 
   #map {
-    flex: 0.8;
+    flex: 1;
     margin: 0 50px;
     border-radius: 20px;
   }
@@ -408,32 +345,55 @@ header {
   label {
     margin: 10px 0;
   }
+
+  form {
+    padding: 10px;
+    margin: auto;
+
+    .input-field label {
+      color: $grey;
+    }
+
+    .input-field {
+      input[type="email"],
+      input[type="text"],
+      input[type="tel"],
+      textarea {
+        box-shadow: none;
+        color: $grey;
+        border-bottom: 1px solid #ddd;
+        &:focus {
+          border-bottom: 2px solid #22dac7;
+        }
+        &.valid {
+          border-bottom: 2px solid #00f800;
+        }
+        &.invalid {
+          border-bottom: 2px solid red;
+        }
+      }
+    }
+  }
 }
 
 footer {
-  border-top: 1px solid #ccc;
-  color: #fff;
-  background: #00b4db; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #0083b0,
-    #00b4db
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #0083b0,
-    #00b4db
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  padding: 20px 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-weight: 200;
+  padding: 20px 0;
+
+  font-weight: 300;
   font-size: 14px;
+  color: #fff;
+
+  border-top: 1px solid #ccc;
+  background: $lightbluePrimary;
+  background: $lightblueGradient;
+  background: $lightblueGradient-webkit;
 
   .redes-container {
-    font-size: 18px;
     text-align: center;
+    font-size: 1.1rem;
   }
 
   i {
@@ -446,12 +406,274 @@ footer {
   }
 
   .copyright {
-    font-size: 20px;
-  }
-  .bold {
-    font-size: 16px;
-    font-weight: 300;
-    margin: 10px 0;
+    font-size: 1.2rem;
   }
 
+  p:not(.sub-text) {
+    margin: 7px 0;
+  }
+  .sub-text {
+    font-weight: 200;
+  }
+}
+
+/* ----------------- MEDIA QUERYS ----------------- */
+
+@media only screen and (max-width: 1100px) {
+  html {
+    font-size: 14px;
+  }
+  // Header Section
+  header {
+    height: 70vh;
+    .kh-png {
+      top: 45%;
+      right: 8%;
+      width: 300px;
+    }
+  }
+
+  #galeria {
+    margin-bottom: 100px;
+
+    .nuestras-obras {
+      width: 50%;
+      padding: 20px 0;
+    }
+
+    .carousel {
+      width: 800px;
+      height: 500px;
+    }
+
+    .carousel-inner {
+      width: 800px;
+      height: 500px;
+
+      img {
+        width: 800px;
+        height: 500px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  html,
+  body {
+    overflow-x: hidden !important;
+  }
+
+  .nav-item {
+    &:hover:after {
+      display: none;
+    }
+  }
+
+  #steel-frame {
+    .parallax-container {
+      h2 {
+        width: 80%;
+      }
+    }
+
+    .steel-frame-info {
+      flex-direction: column;
+
+      .info {
+        width: 70%;
+      }
+
+      p {
+        font-size: 1.3rem;
+        line-height: 1.8rem;
+      }
+
+      .steel-frame-img {
+        display: none;
+      }
+
+      .steel-frame-inner-img {
+        width: 70%;
+        margin: auto;
+        display: block;
+        margin-bottom: 3rem;
+      }
+    }
+  }
+
+  #contacto {
+    display: block;
+    margin: auto;
+
+    h2 {
+      color: $white;
+      width: 80%;
+      text-align: center;
+      align-self: center;
+      margin: auto;
+    }
+
+    #form-container {
+      width: 80%;
+      margin: 3rem auto;
+
+      form {
+        text-align: center;
+      }
+    }
+
+    #map {
+      width: 500px;
+      height: 400px;
+      margin: auto;
+    }
+  }
+} // MQ-1000
+
+@media only screen and (max-width: 800px) {
+  html,
+  body {
+    overflow-x: hidden !important;
+  }
+
+  html {
+    font-size: 13px;
+  }
+
+  header {
+    height: 60vh;
+    .kh-png {
+      width: 200px;
+    }
+  }
+
+  #steel-frame {
+    .ventajas-card {
+      width: 100%;
+      border-radius: 0px;
+      margin-bottom: 50px;
+
+      .item {
+        width: 90%;
+      }
+    }
+  }
+
+  #galeria {
+    .nuestras-obras {
+      width: 70%;
+      padding: 20px 0;
+    }
+
+    .carousel {
+      width: 100%;
+      height: auto;
+    }
+    .carousel-inner {
+      width: 100%;
+      height: auto;
+
+      img {
+        width: 100%;
+        height: auto;
+      }
+    }
+  }
+
+  #contacto {
+    h2 {
+      width: 90%;
+    }
+
+    #form-container {
+      width: 90%;
+    }
+
+    #map {
+      width: 400px;
+      height: 300px;
+      margin: auto;
+    }
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  html,
+  body {
+    overflow-x: hidden !important;
+  }
+
+  html {
+    font-size: 12px;
+  }
+
+  h2 {
+    font-size: 2.2rem;
+  }
+
+  #servicios {
+    p {
+      width: 80%;
+      font-size: 1.1rem;
+    }
+  }
+
+  #steel-frame {
+    .parallax-container {
+      h2 {
+        width: 90%;
+      }
+    }
+    .steel-frame-info {
+      .info {
+        width: 90%;
+      }
+    }
+
+    .ventajas-card {
+      border-radius: 0px;
+
+      .item {
+        width: 90%;
+      }
+    }
+  }
+
+  // Header Section
+  header {
+    height: 45vh;
+    .kh-png {
+      width: 150px;
+    }
+  }
+
+  #contacto {
+    #map {
+      width: 320px;
+      height: 220px;
+      margin: auto;
+    }
+  }
+
+  footer {
+    flex-direction: column;
+    text-align: center;
+  }
+} // MQ-550
+
+@media only screen and (max-width: 415px) {
+  // MOBILE
+  // Header Section
+  html,
+  body {
+    overflow-x: hidden !important;
+  }
+
+  header {
+    height: 40vh;
+    .kh-png {
+      width: 100px;
+    }
+  }
 }
